# xtr-estimator

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: config.yaml
conf/comparison_type/: diff.yaml  diffmap.yaml  triggered.yaml
conf/masking/: advanced.yaml  no_mask.yaml  simple.yaml
examples/: dataset_configs.py
examples/data/b12_sacla/: 100us_30mJ.cm-2_SACLA_qFoFo.mtz  10ms_30mJcm2_SwissFEL_qFoFo.mtz  10ns_12mJ.cm-2_SACLA_qFoFo.mtz  10ns_12mJ.cm-2_light_FPFree.mtz  10ns_30mJ.cm-2_SACLA_qFoFo.mtz  10ns_30mJ.cm-2_light_FPFree.mtz  300ns_30mJ.cm-2_SACLA_qFoFo.mtz  3ms_30mJ.cm-2_SACLA_qFoFo.mtz  3ms_30mJ.cm-2_light_FPFree.mtz  3us_120mJ.cm-2_SACLA_qFoFo.mtz  3us_120mJ.cm-2_light_FPFree.mtz  3us_12mJ.cm-2_light_FPFree.mtz  3us_12mJcm2_SACLA_mFoFo.mtz  3us_30mJ.cm-2_SACLA_qFoFo.mtz  3us_30mJ.cm-2_light_FPFree.mtz  3us_60mJ.cm-2_SACLA_qFoFo.mtz  3us_60mJ.cm-2_light_FPFree.mtz  9S06-sf.cif  9S06_dark.mtz  9S07-sf.cif  9S07.mtz  dark_ref_FPFree.mtz
examples/data/myoglobin/: 5cmv.mtz  5cn4.mtz  5cn5.mtz  5cn6.mtz  5cn7.mtz  5cn8.mtz  5cn9.mtz  5cnb.mtz  5cnc.mtz  5cnd.mtz  5cne.mtz  5cnf.mtz  5cng.mtz  5d5r.mtz  8bkh.mtz  8r9n.mtz
examples/data/photolyase/: readme.txt
examples/data/photolyase/10_30us/: 30us-dark_kwt_ded.mtz  30us_deposit.cif
examples/data/photolyase/11_100us/: 100us-dark_kwt_ded.mtz  100us_deposit.cif  100us_deposit.mtz
examples/data/photolyase/1_superdark/: superdark_deposit.cif
examples/data/photolyase/2_3ps/: 3ps-dark_kwt_ded.mtz  3ps-dark_kwt_ded.pkl  3ps_deposit.cif
examples/data/photolyase/3_300ps/: 300ps-dark_kwt_ded.mtz  300ps_deposit.cif
examples/data/photolyase/4_1ns/: 1ns-dark_kwt_ded.mtz  1ns_deposit.cif
examples/data/rsEGFP2/: 8a6g.ligands.cif  OHD.cif  local_config.yaml
examples/notebooks/: all_methods_overview.ipynb  autoprocess.py  dataset_configs.py  notebook_functions.py  understand_myoglobin.ipynb
examples/scripts/: example_basic.py  example_config_options.py  example_diff.py  pl30ns_meteor.yaml  pl30ns_x8.yaml
test/: conftest.py  test_configuration.py  test_pipeline.py  test_refinement.py  test_xtr_maps.py
xtr_estimator/: alternative_methods.py  config_pydantic.py  configuration.py  estimation.py  logger.py  main.py  masking.py  processing.py  refinement.py  xtr_maps.py
(+19 files in other folders)
