[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xtr-estimator"
version = "0.4.0"
description = "estimate extrapolation factors for time resolved crystallography difference maps"
readme = "README.md"
authors = [
    { name = "Sebastian Bielfeldt", email = "sebastian.bielfeldt@desy.de" },
    { name = "Thomas Lane", email = "thomas.joseph.lane@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "meteor-maps >= 0.4.2",
    "matplotlib >= 3.9.0",
    "jupyterlab >= 4.4.0",
    "pyqt6 >= 6.5.0",
    "pydantic-settings",
    "typer",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nbmake",
]
interactive = [
    "ipympl",
]

[project.scripts]
'xtr_estimator.plot_xtr' = "xtr_estimator.main:main"

[tool.setuptools]
packages = ["xtr_estimator"]


[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E401", "F401", "F841"]
